--- a/projects.html
+++ b/projects.html
@@ -2,17 +2,17 @@
 <html>
 
 <head>
-    <title>Christian Turpin Portfolio</title>
+    <title>Christian Turpin Projects</title>
     <link rel="stylesheet" href="css/styles.css"/>
 </head>
 
 <body>
 
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#projects">Projects</a>
+        <a href="./index.html">Home</a>
+        <a class="active" href="#projects">Projects</a>
         <a href="#music">Music</a>
-        <a href="./projects.html">Photos</a>
+        <a href="#photos">Photos</a>
         <a href="#Blog">Blog</a>
         <a href="#contact">Contact</a>
     </div> 
