--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="#projects">Projects</a>
+        <a href="./projects.html">Projects</a>
         <a href="#music">Music</a>
         <a href="#photos">Photos</a>
         <a href="#Blog">Blog</a>
