--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,12 @@
 <body>
 
     <div class="topnav">
-        <a href="./index.html">Home</a>
-        <a class="active" href="#projects">Projects</a>
-        <a href="#music">Music</a>
-        <a href="#photos">Photos</a>
-        <a href="#Blog">Blog</a>
-        <a href="#contact">Contact</a>
+        <a href="/index.html" class="logo">Christian Turpin</a>
+        <div class="navbar-nav">
+            <a href="./index.html">Home</a>
+            <a class="active" href="#projects">Projects</a>
+        </div>
+        <input class="navSearch" type="text" placeholder="Search..">
     </div> 
 
     
