--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 
     <div class="topnav">
         <a class="active" href="#home">Home</a>
+        <a href="./resume.html">Resume</a>
         <a href="./projects.html">Projects</a>
-        <a href="#music">Music</a>
+        <!-- <a href="#music">Music</a>
         <a href="#photos">Photos</a>
         <a href="#Blog">Blog</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Contact</a> -->
     </div> 
 
     <div class="businessCard">
         <div class="businessCardText"> 
             <h1>Hi! I'm Christian </h1>
-            <p>I'm a third year Engineering Physics Student at UBC</p>
+            <p>I'm a fifth year Engineering Physics Student at UBC graduating in May, 2025</p>
 
             <div class="socialMedia">
                 <a href="https://www.linkedin.com/in/christian-turpin-21710915b/?originalSubdomain=ca" ><img src="images/linkedin.png" id="social"></a>
