--- a/projects.html
+++ b/projects.html
@@ -10,14 +10,33 @@
 
     <div class="topnav">
         <a href="./index.html">Home</a>
+        <a href="./resume.html">Resume</a>
         <a class="active" href="#projects">Projects</a>
-        <a href="#music">Music</a>
-        <a href="#photos">Photos</a>
-        <a href="#Blog">Blog</a>
-        <a href="#contact">Contact</a>
     </div> 
 
-    
+    <div class="projects-container">
+        <div class="project">
+            <a href="mini_mech.html">
+                <img src="images/mini_mech.jpg" alt="Hand Motion Controlled Mini-Mech">
+                <h2>Hand Motion Controlled Mini-Mech</h2>
+            </a>
+            <p>UBC, Vancouver | January 2024 – April 2024</p>
+        </div>
+        <div class="project">
+            <a href="autonomous_robot.html">
+                <img src="images/autonomous_robot.jpg" alt="Machine Learning Autonomous Robot Competition">
+                <h2>Machine Learning Autonomous Robot Competition</h2>
+            </a>
+            <p>UBC, Vancouver | January 2023 – April 2023</p>
+        </div>
+        <div class="project">
+            <a href="treasure_hunting_robot.html">
+                <img src="images/robot.PNG" alt="Autonomous Treasure Hunting Robot">
+                <h2>Autonomous Treasure Hunting Robot</h2>
+            </a>
+            <p>UBC, Vancouver | July 2022 – August 2022</p>
+        </div>
+    </div>
+
 </body>
 </html>
-
