Reformatted project page, changed portrait photo

--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <head>
     <title>Christian Turpin Projects</title>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/projects.css"/>
 </head>
 
 <body>
@@ -16,15 +17,22 @@
 
     <div class="projects-container">
         <div class="project">
+            <a href="ion_thruster.html">
+                <img src="images/hall_thruster.jpg" alt="Ion Thruster">
+                <h2>Hollow Cathode for Satellite Hall Effect Thruster</h2>
+            </a>
+            <p>UBC, Vancouver | September 2024 – April 2025</p>
+        </div>
+        <div class="project">
             <a href="mini_mech.html">
-                <img src="images/mini_mech.jpg" alt="Hand Motion Controlled Mini-Mech">
+                <img src="images/mini_mech2.jpg" alt="Hand Motion Controlled Mini-Mech">
                 <h2>Hand Motion Controlled Mini-Mech</h2>
             </a>
             <p>UBC, Vancouver | January 2024 – April 2024</p>
         </div>
         <div class="project">
             <a href="autonomous_robot.html">
-                <img src="images/autonomous_robot.jpg" alt="Machine Learning Autonomous Robot Competition">
+                <img src="images/ml_comp.png" alt="Machine Learning Autonomous Robot Competition">
                 <h2>Machine Learning Autonomous Robot Competition</h2>
             </a>
             <p>UBC, Vancouver | January 2023 – April 2023</p>
