--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
         <a class="active" href="#home">Home</a>
         <a href="./resume.html">Resume</a>
         <a href="./projects.html">Projects</a>
-        <!-- <a href="#music">Music</a>
-        <a href="#photos">Photos</a>
-        <a href="#Blog">Blog</a>
-        <a href="#contact">Contact</a> -->
     </div> 
 
     <div class="businessCard">
@@ -34,7 +30,7 @@
         </div>
 
         <div class="businessCardPhoto">
-            <img src="images/portrait.jpeg" alt="Christian Turpin Portrait" id="portrait">
+            <img src="images/businessPhoto3.JPG" alt="Christian Turpin Portrait" id="portrait">
         </div>
     </div>
     
