Added resume pdf

--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,22 @@
+
+
+
 <!DOCTYPE html>
 <html>
 
 <head>
     <title>Christian Turpin Resume</title>
     <link rel="stylesheet" href="css/styles.css"/>
+    <style>
+        #resume-content {
+            width: 100%;
+            height: 100vh;
+        }
+        embed, iframe {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,6 +27,11 @@
         <a href="./projects.html">Projects</a>
     </div> 
 
+    <div id="resume-content">
+        <embed src="Resume2.pdf" type="application/pdf" />
+        <!-- Alternatively, you can use an iframe -->
+        <!-- <iframe src="Resume2.pdf"></iframe> -->
+    </div>
     
 </body>
 </html>
