--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="businessCard">
         <div class="businessCardText"> 
             <h1>Hi! I'm Christian </h1>
-            <p>I'm a fifth year Engineering Physics Student at UBC graduating in May, 2025</p>
+            <p>I'm a 5th year Engineering Physics Student at UBC graduating in May, 2025</p>
 
             <div class="socialMedia">
                 <a href="https://www.linkedin.com/in/christian-turpin-21710915b/?originalSubdomain=ca" ><img src="images/linkedin.png" id="social"></a>
