--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
         <div class="project">
             <a href="treasure_hunting_robot.html">
                 <img src="images/robot.PNG" alt="Autonomous Treasure Hunting Robot">
-                <h2>Autonomous Treasure Hunting Robot</h2>
+                <h2>1st Place Autonomous Treasure Hunting Robot</h2>
             </a>
             <p>UBC, Vancouver | July 2022 – August 2022</p>
         </div>
