--- a/mini_mech.html
+++ b/mini_mech.html
@@ -4,6 +4,7 @@
 <head>
     <title>Hand Motion Controlled Mini-Mech</title>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/project.css"/>
 </head>
 
 <body>
@@ -11,18 +12,54 @@
     <div class="topnav">
         <a href="./index.html">Home</a>
         <a href="./resume.html">Resume</a>
-        <a href="./projects.html">Projects</a>
+        <a class="active" href="./projects.html">Projects</a>
     </div> 
 
     <div class="project-detail">
         <img src="images/mini_mech.jpg" alt="Hand Motion Controlled Mini-Mech">
         <h2>Hand Motion Controlled Mini-Mech</h2>
         <p>UBC, Vancouver | January 2024 – April 2024</p>
+
+        <h3>Background</h3>
+        <p>
+            This project aims to create a tabletop-scaled version of the Prosthesis mech suit, enabling intuitive control via a glove-based system that maps finger movements to the mech's legs. Sponsored by Exosapien Technologies, this 1:20 scale prototype uses servo motors for actuation and flex sensors for control.
+        </p>
+
+        <h3>Design and Approach</h3>
+        <h4>Mechanical Design</h4>
         <ul>
-            <li>Designed and constructed scaled down version of the Prosthesis mech suit for Exosapien Technologies</li>
-            <li>Utilized flex sensors to map the user’s finger motion to the mini-mechs join movement</li>
+            <li>Selected micro MG90 servo motors for their torque and cost-effectiveness.</li>
+            <li>Used a geared joint mechanism for compact, aesthetic leg movement.</li>
+            <li>Designed a simplified chassis for easier 3D printing and assembly.</li>
         </ul>
+
+        <h4>Glove Design</h4>
+        <ul>
+            <li>Flex sensors mounted on gloves track finger motion.</li>
+            <li>Sensors are connected to ESP32 microcontrollers for wireless control.</li>
+            <li>Implemented a sliding sheath design to prevent sensor distortion.</li>
+        </ul>
+
+        <h4>Integration and Controls</h4>
+        <ul>
+            <li>Used the ESP32 microcontroller to map flex sensor data to servo positions.</li>
+            <li>Added noise reduction through averaging and calibration routines.</li>
+        </ul>
+
+        <h3>Testing and Results</h3>
+        <p>
+            The prototype was tested for servo torque, noise levels, and user intuitiveness. The mech demonstrated smooth movements and reliable communication, though stability during walking remains a challenge.
+        </p>
+
+        <h3>Recommendations</h3>
+        <ul>
+            <li>Adjust chassis design to lower the center of mass for improved stability.</li>
+            <li>Refine the mapping between finger motion and mech leg movement.</li>
+            <li>Use screws instead of glue for securing servo gears in future iterations.</li>
+        </ul>
+
     </div>
 
 </body>
+
 </html>
