--- a/treasure_hunting_robot.html
+++ b/treasure_hunting_robot.html
@@ -4,6 +4,7 @@
 <head>
     <title>Autonomous Treasure Hunting Robot</title>
     <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/project.css"/>
 </head>
 
 <body>
