--- a/treasure_hunting_robot.html
+++ b/treasure_hunting_robot.html
@@ -30,6 +30,10 @@
             <li>Integrated an array of sensors, including reflectance sensors, sonar sensors, infrared sensors, hall effect sensors, and encoders for advanced course navigation</li>
             <li>Developed software in C++ for nuanced sensor input analysis and precise robot control using PID</li>
         </ul>
+        <video controls>
+            <source src="videos/enph353_comp.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </div>
 
 </body>
