--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="businessCard">
         <div class="businessCardText"> 
-            <h1>Hi! I'm Christian </h1>
-            <p>I'm a 5th year Engineering Physics Student at UBC graduating in May, 2025</p>
+            <h1>Christian Turpin </h1>
+            <p>5th year Engineering Physics Student at UBC graduating in May, 2025</p>
 
             <div class="socialMedia">
                 <a href="https://www.linkedin.com/in/christian-turpin-21710915b/?originalSubdomain=ca" ><img src="images/linkedin.png" id="social"></a>
