Added topnav name label

--- a/mini_mech.html
+++ b/mini_mech.html
@@ -16,7 +16,6 @@
     </div> 
 
     <div class="project-detail">
-        <img src="images/mini_mech.jpg" alt="Hand Motion Controlled Mini-Mech">
         <h2>Hand Motion Controlled Mini-Mech</h2>
         <p>UBC, Vancouver | January 2024 – April 2024</p>
 
@@ -24,6 +23,8 @@
         <p>
             This project aims to create a tabletop-scaled version of the Prosthesis mech suit, enabling intuitive control via a glove-based system that maps finger movements to the mech's legs. Sponsored by Exosapien Technologies, this 1:20 scale prototype uses servo motors for actuation and flex sensors for control.
         </p>
+
+        <img src="images/prosthesis.jpg" alt="Prosthesis Mech Suit" id="prosthesis">
 
         <h3>Design and Approach</h3>
         <h4>Mechanical Design</h4>
@@ -33,12 +34,16 @@
             <li>Designed a simplified chassis for easier 3D printing and assembly.</li>
         </ul>
 
+        <img src="images/mini_mech.jpg" alt="Hand Motion Controlled Mini-Mech">
+
         <h4>Glove Design</h4>
         <ul>
             <li>Flex sensors mounted on gloves track finger motion.</li>
             <li>Sensors are connected to ESP32 microcontrollers for wireless control.</li>
             <li>Implemented a sliding sheath design to prevent sensor distortion.</li>
         </ul>
+
+        
 
         <h4>Integration and Controls</h4>
         <ul>
