--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,7 @@
 <body>
 
     <div class="topnav">
+        <a class="name" href="./index.html">Christian Turpin</a>
         <a href="./index.html">Home</a>
         <a class="active" href="#resume">Resume</a>
         <a href="./projects.html">Projects</a>
