--- a/work_experience.html
+++ b/work_experience.html
@@ -10,10 +10,10 @@
 <body>
 
     <div class="topnav">
-        <a class="name" href="./index.html">Christian Turpin</a>
         <a href="./index.html">Home</a>
         <a href="./resume.html">Resume</a>
-        <a class="active" href="#projects">Projects</a>
+        <a class="active" href="#work_experience">Work Experience</a>
+        <a href="./projects.html">Projects</a>
     </div> 
 
     <div class="projects-container">
@@ -48,4 +48,3 @@
     </div>
 
 </body>
-</html>
