Added hall thruster coming soon page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="businessCard">
             <div class="businessCardText"> 
                 <h1>Christian Turpin </h1>
-                <p>5th year Engineering Physics Student at UBC graduating in May, 2025</p>
+                <p>5th year Engineering Physics student at UBC graduating in May, 2025</p>
 
                 <div class="socialMedia">
                     <a href="https://www.linkedin.com/in/christian-turpin-21710915b/?originalSubdomain=ca" ><img src="images/linkedin.png" id="social"></a>
