--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 
     <div class="projects-container">
         <div class="project">
-            <a href="ion_thruster.html">
+            <a href="hall_thruster.html">
                 <img src="images/hall_thruster.jpg" alt="Ion Thruster">
                 <h2>Hollow Cathode for Satellite Hall Effect Thruster</h2>
             </a>
